# strata

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.claude/skills/oda-review/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
architecture/: staging.yaml  strata.yaml
architecture/data/: architecture.yaml
architecture/enterprise/: architecture.yaml
architecture/solutions/: data-mesh-for-analytics-and-ai-ml-platform.yaml  event-driven-core-network-operations.yaml  kubernetes-hybrid-platform.yaml  meridian-telecom-customer-experience-platform.yaml  network-operations-platform.yaml  unified-api-gateway-architecture.yaml
src/strata/: advisor.py  agent.py  ai_errors.py  analyzer.py  cli.py  cncf.py  loader.py  parser.py  renderer.py  reporting.py  tracker.py  validation.py  validator.py  workspace.py
src/strata/providers/: __init__.py  codex_cli.py  disabled.py
tests/: test_advisor.py  test_ai_providers.py  test_cli.py  test_scoring_workflow.py
